--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2233,14 +2233,14 @@ margin-top: 10vh;
 }
 
 .LoginSignupCont{
-  background-color:  rgb(117, 40, 204);
+  background-color:  rgb(117, 40, 204); 
 
 
   overflow: hidden;
-  height: 100vh;
+  height: 110vh;
   margin-bottom: 100px;
   padding-top: 30px;
-
+  
 
 }
 
@@ -2258,10 +2258,15 @@ margin-top: 10vh;
 {
 
   width: 30vw;
-  min-height: 70vh;
+  min-height: 80vh;
   margin: auto;
   padding: 35px;
   margin-top: 10vh;
+}
+
+.SignupContainer{
+  height: 150vh;
+  
 }
 
 .loginContainer h2,.SignupContainer h2{
@@ -2437,10 +2442,20 @@ background-color: transparent;
   color: rgb(166, 88, 255);
 
 }
-.loginContainer p:nth-of-type(2),.SignupContainer p:nth-of-type(1){
+.loginContainer p:nth-of-type(2){
 
   position: relative;
   top: 10px;
+  color: #606060;
+  font-family: "Anuphan";
+  margin-left: 150px;
+  font-size: 16px;
+  
+}
+
+.SignupContainer p:nth-of-type(1){
+  position: absolute;
+  bottom: 20px;
   color: #606060;
   font-family: "Anuphan";
   margin-left: 150px;
