--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -3,7 +3,10 @@
   min-height: 100vh;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+
 }
+
 
 .navContainer {
   display: flex;
@@ -228,10 +231,16 @@
   width: 20px;
 }
 
+
+
 .cardWithfilter {
   border: 1px solid rgb(186, 186, 186);
   margin-top: 120px;
+
+
 }
+
+
 
 .cardWithfilter h5 {
   font-weight: lighter;
@@ -253,10 +262,12 @@
   width: 80vw;
   margin-left: 17.5vw;
   border-left: none;
+
   position: relative;
   bottom: 737px;
  
   overscroll-behavior: contain;
+ 
 }
 
 /* Media Queries */
@@ -912,6 +923,10 @@ background-color:  rgb(96, 30, 172);
   
 }
 
+.ratingDiv button{
+  background-color: rgb(96, 33, 242)s;
+}
+
 .wish button{
   position: relative;
   top:16vh;
@@ -983,6 +998,7 @@ opacity: 0.8;
     /* border: 2px solid rgb(255, 57, 57); */
     border: 1px solid transparent;
     width: 100vw;
+    overflow-x: hidden;
 
 }
 
@@ -2521,7 +2537,8 @@ margin-left: 14vw;
   }
 
   .cartRight button{
-    background-color: rgb(117, 40, 204);
+    background-color: rgb(96, 33, 242);
+    ;
     padding:15px;
     font-size: 15px;
     width: 25vw;
@@ -3401,6 +3418,12 @@ right: 70vw;
 
   color: rgb(33, 33, 33);
 }
+
+.accountSideBar button{
+  background-color: rgb(96, 33, 242);
+  padding: 11px 0px;
+  border-radius: 6px;
+}
 .ProfileNavIcons
 {
   height: 22px;
@@ -3724,7 +3747,8 @@ border: 2px solid rgb(152, 71, 206);
 }
 
 .addAddress button{
-  background-color: rgb(148, 33, 242);
+  background-color: rgb(96, 33, 242);
+  ;
   padding:8px;
   font-size: 14px;
   width: 5vw;
@@ -4394,4 +4418,40 @@ width: 25px;
 
 .profileReview > img:hover{
   cursor: pointer;
+}
+
+.loaderParent{
+  background-color: rgb(255, 255, 255);
+  width: 100vw;
+  height:100vh;
+
+}
+.loader {
+  border: 4px solid #f4f4f4;
+  border-radius: 50%;
+  z-index: 10;
+  border-top: 4px solid rgb(96, 30, 172);
+  width: 40px;
+  height: 40px;
+  -webkit-animation: spin 2s linear infinite; /* Safari */
+  animation: spin 1s linear infinite;
+  position: absolute;
+  top: 42%;
+  left: 48%;
+
+  /* display: none; */
+  z-index: 3;
+  
+}
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+
+  100% { transform: rotate(360deg); }
+
 }
